fixed some bug with database
